--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,45 @@
 #    branch: master
 #    commands:
 #      - $DOCKER_HUB_TRIGGER
+# Javascript Node 8 simple CircleCI 2.0 configuration file
+# Eduardo San Martin Morote
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# Put this file in a .circleci/ folder
 version: 2
+
+
 jobs:
   build:
-    # Remove if parallelism is not desired
-    parallelism: 2
-test:
-  override:    
-    - mocha
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:8
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+    test:
+        override:    
+        - mocha
+
+      # run tests!
+      - run: npm test
